syntax = "proto3";

package echo;

option go_package = "./";

message EchoRequest {
  string name = 1;
}

message EchoResponse {
  string message = 1;
}

service EchoService {
  rpc SayHello(EchoRequest) returns (EchoResponse) {};
  rpc SayHelloStream(EchoRequest) returns (stream EchoResponse) {};  
}